--- a/app/src/pages/SearchOrder/SearchOrder.css
+++ b/app/src/pages/SearchOrder/SearchOrder.css
@@ -8,6 +8,7 @@
 .heading {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 11px;
     padding: 1rem 0;
     width: 65%;
